Bug 39192 - Formula involving jump matrix calculate incorrectly
Summary: Formula involving jump matrix calculate incorrectly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: All All
: highest critical
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:3.5
Keywords: regression
Depends on:
Blocks:
 
Reported: 2011-07-13 07:23 UTC by Kohei Yoshida
Modified: 2011-08-24 12:45 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
test document (15.00 KB, application/vnd.ms-excel)
2011-07-13 07:31 UTC, Kohei Yoshida
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2011-07-13 07:23:20 UTC
The attached document should show TRUE in all cells in Column F, but it doesn't.

The build from the -3-4 branch calculates correctly.  So this is currently a master-only problem.
Comment 1 Kohei Yoshida 2011-07-13 07:31:00 UTC
Created attachment 49038 [details]
test document

Holy crap. Where did my attachment go?
Comment 2 m_a_riosv 2011-07-20 14:24:53 UTC
Works well in Win7x64 Ultimate, LIBO 3.4.2RC3
Comment 3 Kohei Yoshida 2011-07-20 14:31:26 UTC
(In reply to comment #2)
> Works well in Win7x64 Ultimate, LIBO 3.4.2RC3

It's a master only bug.
Comment 4 Eike Rathke (retired, only occasionally showing up) 2011-08-24 12:43:35 UTC
Fixed on master:
http://cgit.freedesktop.org/libreoffice/core/commit/?id=611f4ba20177b236007a2e03723dbc0c79c388d3
Comment 5 Eike Rathke (retired, only occasionally showing up) 2011-08-24 12:45:56 UTC
oops, that's http://cgit.freedesktop.org/libreoffice/core/commit/?id=22a821239eae392704be9dc0a38d117dd11ee8f3 instead.