fdo#39192 correctly calculate jump matrix; end of path if NULL